--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,11 @@
 gradio==3.45.0
 openai==0.27.9
 googletrans==4.0.0rc1
-httpx==0.24.1
-aiofiles<24.0,>=22.0
-altair<6.0,>=4.2.0
-fastapi
-ffmpy
-gradio-client==0.5.2
-huggingface-hub>=0.14.0
-importlib-resources<7.0,>=1.3
-jinja2<4.0
-MarkupSafe~=2.0
-matplotlib~=3.0
-numpy~=1.0
-orjson~=3.0
-packaging
-pandas<3.0,>=1.0
-pydantic!=1.8,!=1.9
+
+# Let pip resolve these
+requests
+tqdm
 pydub
 python-multipart
-pyyaml<7.0,>=5.0
-requests~=2.0
-semantic-version~=2.10
-typing-extensions
-uvicorn>=0.14.0
-websockets<12.0,>=10.0
-tqdm
 aiohttp
+uvicorn
