--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,6 @@
-gradio==3.45.0
+gradio==3.44.4
 openai==0.27.9
+httpx==0.23.3
 googletrans==4.0.0rc1
-
-# Let pip resolve these
-requests
-tqdm
-pydub
-python-multipart
-aiohttp
-uvicorn
+pydub==0.25.1
+python-dotenv==1.0.1
